# CBGdImage

./: CBGdImage.cpp  CMakeLists.txt  README.md
lib/: gd.cb
sample/: gdtest.cb
